Archive2/49/f8fccc561c8ae9/output
main.cpp:8:13: error: default initialization of an object of const type 'const A' requires a user-provided default constructor
    A const a;
            ^
1 error generated.
