Archive2/49/f8fccc561c8ae9/main.cpp
#include <iostream>

struct A {
};

int main()
{
    A const a;
    return 0;
}
